apps/AxieAnalytics/postgresql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axieanalytics-postgresql
  namespace: axieanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axieanalytics-postgresql
  template:
    metadata:
      labels: 
        app: axieanalytics-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:17.5
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: axieanalytics-postgresql-pvc
      restartPolicy: Always
